--- a/About.html
+++ b/About.html
@@ -288,7 +288,7 @@
     <!-- Original About Page Content -->
     <div>
         <!-- Hero Section -->
-        <section class="py-16 bg-gradient-to-r from-green-600 to-green-700 relative overflow-hidden">
+        <section class="py-16 bg-gradient-to-r from-[#A76545] to-[#FFA55D] relative overflow-hidden">
             <!-- Background Image -->
             <div class="absolute inset-0 opacity-20">
                 <img 
@@ -325,7 +325,7 @@
             </div>
             <div class="container mx-auto px-4">
                 <div class="max-w-4xl mx-auto text-center">
-                    <h2 class="text-3xl md:text-4xl font-bold text-gray-900 mb-8 animate-fade-in">Our Mission</h2>
+                    <h2 class="text-3xl md:text-4xl font-bold text-[#8AA624] mb-8 animate-fade-in">Our Mission</h2>
                     <p class="text-lg text-gray-600 mb-8 animate-fade-in-delay">
                         At Ifa-Langa, we're dedicated to empowering farmers with the knowledge, tools, and strategies 
                         they need to thrive in an ever-evolving agricultural landscape. Our mission is to bridge the gap 
@@ -343,121 +343,98 @@
         </section>
 
         <!-- Values Section -->
-        <section class="py-16 bg-gray-50">
-            <div class="container mx-auto px-4">
-                <div class="text-center mb-12">
-                    <h2 class="text-3xl md:text-4xl font-bold text-gray-900 mb-4">Our Core Values</h2>
-                    <p class="text-lg text-gray-600 max-w-2xl mx-auto">
-                        These principles guide everything we do and shape how we serve our farming community.
-                    </p>
-                </div>
+       <section class="py-16 bg-gray-50">
+    <div class="container mx-auto px-4">
+        <div class="text-center mb-12">
+            <h2 class="text-3xl md:text-4xl font-bold text-[#8AA624] mb-4">Our Core Values</h2>
+            <p class="text-lg text-gray-600 max-w-2xl mx-auto">
+                These principles guide everything we do and shape how we serve our farming community.
+            </p>
+        </div>
 
-                <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
-                    <!-- Value 1: Precision Agriculture -->
-                    <div class="bg-white p-8 rounded-xl shadow-lg hover:shadow-xl transition-all duration-300 transform hover:-translate-y-2 group animate-slide-up">
-                        <div class="flex items-start space-x-4">
-                            <div class="flex-shrink-0 group-hover:scale-110 transition-transform duration-300">
-                                <i data-lucide="target" class="h-8 w-8 text-green-600"></i>
-                            </div>
-                            <div>
-                                <h3 class="text-xl font-semibold text-gray-900 mb-2 group-hover:text-green-600 transition-colors">Precision Agriculture</h3>
-                                <p class="text-gray-600 group-hover:text-gray-700 transition-colors">We leverage data-driven insights and modern technology to optimize every aspect of your farming operation.</p>
-                            </div>
-                        </div>
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+            <!-- Value 1: Precision Agriculture -->
+            <div class="bg-gradient-to-br from-[#FFDF88] to-[#FFA55D] p-8 rounded-xl shadow-lg hover:shadow-xl transition-all duration-300 transform hover:-translate-y-2 group animate-slide-up">
+                <div class="flex items-start space-x-4">
+                    <div class="flex-shrink-0 group-hover:scale-110 transition-transform duration-300">
+                        <i data-lucide="target" class="h-8 w-8 text-[#8AA624]"></i>
                     </div>
-
-                    <!-- Value 2: Partnership Approach -->
-                    <div class="bg-white p-8 rounded-xl shadow-lg hover:shadow-xl transition-all duration-300 transform hover:-translate-y-2 group animate-slide-up" style="animation-delay: 200ms">
-                        <div class="flex items-start space-x-4">
-                            <div class="flex-shrink-0 group-hover:scale-110 transition-transform duration-300">
-                                <i data-lucide="users" class="h-8 w-8 text-green-600"></i>
-                            </div>
-                            <div>
-                                <h3 class="text-xl font-semibold text-gray-900 mb-2 group-hover:text-green-600 transition-colors">Partnership Approach</h3>
-                                <p class="text-gray-600 group-hover:text-gray-700 transition-colors">We work closely with farmers, understanding their unique challenges and goals to deliver personalized solutions.</p>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Value 3: Innovation Focus -->
-                    <div class="bg-white p-8 rounded-xl shadow-lg hover:shadow-xl transition-all duration-300 transform hover:-translate-y-2 group animate-slide-up" style="animation-delay: 400ms">
-                        <div class="flex items-start space-x-4">
-                            <div class="flex-shrink-0 group-hover:scale-110 transition-transform duration-300">
-                                <i data-lucide="lightbulb" class="h-8 w-8 text-green-600"></i>
-                            </div>
-                            <div>
-                                <h3 class="text-xl font-semibold text-gray-900 mb-2 group-hover:text-green-600 transition-colors">Innovation Focus</h3>
-                                <p class="text-gray-600 group-hover:text-gray-700 transition-colors">Constantly researching and implementing the latest agricultural innovations to stay ahead of industry trends.</p>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Value 4: Proven Excellence -->
-                    <div class="bg-white p-8 rounded-xl shadow-lg hover:shadow-xl transition-all duration-300 transform hover:-translate-y-2 group animate-slide-up" style="animation-delay: 600ms">
-                        <div class="flex items-start space-x-4">
-                            <div class="flex-shrink-0 group-hover:scale-110 transition-transform duration-300">
-                                <i data-lucide="award" class="h-8 w-8 text-green-600"></i>
-                            </div>
-                            <div>
-                                <h3 class="text-xl font-semibold text-gray-900 mb-2 group-hover:text-green-600 transition-colors">Proven Excellence</h3>
-                                <p class="text-gray-600 group-hover:text-gray-700 transition-colors">Our track record speaks for itself with consistent results and long-term client relationships.</p>
-                            </div>
-                        </div>
+                    <div>
+                        <h3 class="text-xl font-semibold text-gray-900 mb-2 group-hover:text-[#8AA624] transition-colors">Precision Agriculture</h3>
+                        <p class="text-gray-700 group-hover:text-gray-900 transition-colors">We leverage data-driven insights and modern technology to optimize every aspect of your farming operation.</p>
                     </div>
                 </div>
             </div>
-        </section>
 
-        <!-- Team Section -->
-        <section class="py-16">
-            <div class="container mx-auto px-4">
-                <div class="text-center mb-12">
-                    <h2 class="text-3xl md:text-4xl font-bold text-gray-900 mb-4">Meet Our Expert Team</h2>
-                    <p class="text-lg text-gray-600 max-w-2xl mx-auto">
-                        Our team of certified agricultural professionals brings together decades of experience 
-                        and cutting-edge expertise.
-                    </p>
-                </div>
-
-                <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-                    <!-- Team Member 1 -->
-                    <div class="text-center bg-white p-8 rounded-xl shadow-lg hover:shadow-xl transition-all duration-300 transform hover:-translate-y-2 group animate-fade-in-up">
-                        <img
-                            src="https://images.pexels.com/photos/1181690/pexels-photo-1181690.jpeg?auto=compress&cs=tinysrgb&w=400"
-                            alt="Dr. Sarah Johnson"
-                            class="w-32 h-32 rounded-full mx-auto mb-4 object-cover group-hover:scale-110 transition-transform duration-300 shadow-lg"
-                        />
-                        <h3 class="text-xl font-semibold text-gray-900 mb-1 group-hover:text-green-600 transition-colors">Dr. Sarah Johnson</h3>
-                        <p class="text-green-600 font-medium mb-4 group-hover:text-green-700 transition-colors">Lead Agricultural Scientist</p>
-                        <p class="text-gray-600 text-sm group-hover:text-gray-700 transition-colors">PhD in Agricultural Engineering with 15+ years of experience in sustainable farming practices.</p>
+            <!-- Value 2: Partnership Approach -->
+            <div class="bg-gradient-to-br from-[#FFDF88] to-[#FFA55D] p-8 rounded-xl shadow-lg hover:shadow-xl transition-all duration-300 transform hover:-translate-y-2 group animate-slide-up" style="animation-delay: 200ms">
+                <div class="flex items-start space-x-4">
+                    <div class="flex-shrink-0 group-hover:scale-110 transition-transform duration-300">
+                        <i data-lucide="users" class="h-8 w-8 text-[#8AA624]"></i>
                     </div>
-
-                    <!-- Team Member 2 -->
-                    <div class="text-center bg-white p-8 rounded-xl shadow-lg hover:shadow-xl transition-all duration-300 transform hover:-translate-y-2 group animate-fade-in-up" style="animation-delay: 200ms">
-                        <img
-                            src="https://images.pexels.com/photos/1212984/pexels-photo-1212984.jpeg?auto=compress&cs=tinysrgb&w=400"
-                            alt="Michael Chen"
-                            class="w-32 h-32 rounded-full mx-auto mb-4 object-cover group-hover:scale-110 transition-transform duration-300 shadow-lg"
-                        />
-                        <h3 class="text-xl font-semibold text-gray-900 mb-1 group-hover:text-green-600 transition-colors">Michael Chen</h3>
-                        <p class="text-green-600 font-medium mb-4 group-hover:text-green-700 transition-colors">Soil Management Expert</p>
-                        <p class="text-gray-600 text-sm group-hover:text-gray-700 transition-colors">Certified soil scientist specializing in precision nutrient management and soil health optimization.</p>
-                    </div>
-
-                    <!-- Team Member 3 -->
-                    <div class="text-center bg-white p-8 rounded-xl shadow-lg hover:shadow-xl transition-all duration-300 transform hover:-translate-y-2 group animate-fade-in-up" style="animation-delay: 400ms">
-                        <img
-                            src="https://images.pexels.com/photos/1130626/pexels-photo-1130626.jpeg?auto=compress&cs=tinysrgb&w=400"
-                            alt="Emma Rodriguez"
-                            class="w-32 h-32 rounded-full mx-auto mb-4 object-cover group-hover:scale-110 transition-transform duration-300 shadow-lg"
-                        />
-                        <h3 class="text-xl font-semibold text-gray-900 mb-1 group-hover:text-green-600 transition-colors">Emma Rodriguez</h3>
-                        <p class="text-green-600 font-medium mb-4 group-hover:text-green-700 transition-colors">Crop Production Specialist</p>
-                        <p class="text-gray-600 text-sm group-hover:text-gray-700 transition-colors">Expert in crop rotation strategies and integrated pest management with a focus on organic practices.</p>
+                    <div>
+                        <h3 class="text-xl font-semibold text-gray-900 mb-2 group-hover:text-[#8AA624] transition-colors">Partnership Approach</h3>
+                        <p class="text-gray-700 group-hover:text-gray-900 transition-colors">We work closely with farmers, understanding their unique challenges and goals to deliver personalized solutions.</p>
                     </div>
                 </div>
             </div>
-        </section>
+
+            <!-- Value 3: Innovation Focus -->
+            <div class="bg-gradient-to-br from-[#FFDF88] to-[#FFA55D] p-8 rounded-xl shadow-lg hover:shadow-xl transition-all duration-300 transform hover:-translate-y-2 group animate-slide-up" style="animation-delay: 400ms">
+                <div class="flex items-start space-x-4">
+                    <div class="flex-shrink-0 group-hover:scale-110 transition-transform duration-300">
+                        <i data-lucide="lightbulb" class="h-8 w-8 text-[#8AA624]"></i>
+                    </div>
+                    <div>
+                        <h3 class="text-xl font-semibold text-gray-900 mb-2 group-hover:text-[#8AA624] transition-colors">Innovation Focus</h3>
+                        <p class="text-gray-700 group-hover:text-gray-900 transition-colors">Constantly researching and implementing the latest agricultural innovations to stay ahead of industry trends.</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Value 4: Proven Excellence -->
+            <div class="bg-gradient-to-br from-[#FFDF88] to-[#FFA55D] p-8 rounded-xl shadow-lg hover:shadow-xl transition-all duration-300 transform hover:-translate-y-2 group animate-slide-up" style="animation-delay: 600ms">
+                <div class="flex items-start space-x-4">
+                    <div class="flex-shrink-0 group-hover:scale-110 transition-transform duration-300">
+                        <i data-lucide="award" class="h-8 w-8 text-[#8AA624]"></i>
+                    </div>
+                    <div>
+                        <h3 class="text-xl font-semibold text-gray-900 mb-2 group-hover:text-[#8AA624] transition-colors">Proven Excellence</h3>
+                        <p class="text-gray-700 group-hover:text-gray-900 transition-colors">Our track record speaks for itself with consistent results and long-term client relationships.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- Team Section -->
+<section class="py-16">
+    <div class="container mx-auto px-4">
+        <div class="text-center mb-12">
+            <h2 class="text-3xl md:text-4xl font-bold text-[#8AA624] mb-4">Meet Our Expert</h2>
+            <p class="text-lg text-gray-600 max-w-2xl mx-auto">
+                Our team of certified agricultural professionals brings together decades of experience 
+                and cutting-edge expertise.
+            </p>
+        </div>
+
+        <div class="flex justify-center">
+            <div class="w-full max-w-md">
+                <!-- Team Member 2 -->
+                <div class="text-center bg-white p-8 rounded-xl shadow-lg hover:shadow-xl transition-all duration-300 transform hover:-translate-y-2 group animate-fade-in-up" style="animation-delay: 200ms">
+                    <img
+                        src="https://images.pexels.com/photos/1212984/pexels-photo-1212984.jpeg?auto=compress&cs=tinysrgb&w=400"
+                        alt="Michael Chen"
+                        class="w-32 h-32 rounded-full mx-auto mb-4 object-cover group-hover:scale-110 transition-transform duration-300 shadow-lg"
+                    />
+                    <h3 class="text-xl font-semibold text-gray-900 mb-1 group-hover:text-green-600 transition-colors">Michael Chen</h3>
+                    <p class="text-green-600 font-medium mb-4 group-hover:text-green-700 transition-colors">Soil Management Expert</p>
+                    <p class="text-gray-600 text-sm group-hover:text-gray-700 transition-colors">Certified soil scientist specializing in precision nutrient management and soil health optimization.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
         <!-- Company Stats -->
         <section class="py-16 bg-gradient-to-r from-green-600 via-green-700 to-green-600 relative overflow-hidden">
