--- a/Service.html
+++ b/Service.html
@@ -325,7 +325,7 @@
     <!-- Service Page Content -->
     <div>
         <!-- Hero Section -->
-        <section class="py-16 bg-gradient-to-r from-green-600 to-green-700 relative overflow-hidden">
+        <section class="py-16 bg-gradient-to-r from-[#A76545] to-[#FFA55D] relative overflow-hidden">
             <!-- Background Image -->
             <div class="absolute inset-0 opacity-15">
                 <img 
@@ -372,7 +372,7 @@
             </div>
             <div class="container mx-auto px-4">
                 <div class="text-center mb-16">
-                    <h2 class="text-3xl md:text-4xl font-bold text-gray-900 mb-4 animate-fade-in">Our Core Services</h2>
+                    <h2 class="text-3xl md:text-4xl font-bold text-[#8AA624] mb-4 animate-fade-in">Our Core Services</h2>
                     <p class="text-lg text-gray-600 max-w-3xl mx-auto animate-fade-in-delay">
                         Three pillars of agricultural excellence that form the foundation of our comprehensive service offering.
                     </p>
@@ -587,7 +587,7 @@
             </div>
             <div class="container mx-auto px-4">
                 <div class="text-center mb-12">
-                    <h2 class="text-3xl md:text-4xl font-bold text-gray-900 mb-4">Additional Services</h2>
+                    <h2 class="text-3xl md:text-4xl font-bold text-[#8AA624] mb-4">Additional Services</h2>
                     <p class="text-lg text-gray-600 max-w-2xl mx-auto">
                         Supporting services that complement our core offerings to provide comprehensive agricultural support.
                     </p>
@@ -817,7 +817,7 @@
         <section class="py-16 bg-white">
             <div class="container mx-auto px-4">
                 <div class="text-center mb-12">
-                    <h2 class="text-3xl md:text-4xl font-bold text-gray-900 mb-4">Our Process</h2>
+                    <h2 class="text-3xl md:text-4xl font-bold font-bold text-[#8AA624] mb-4">Our Process</h2>
                     <p class="text-lg text-gray-600 max-w-2xl mx-auto">
                         A systematic approach to agricultural consultation that ensures comprehensive 
                         analysis and effective implementation.
@@ -871,7 +871,7 @@
                     <div class="inline-flex items-center justify-center bg-green-100 text-green-600 p-3 rounded-full mb-4">
                         <i data-lucide="graduation-cap" class="h-8 w-8"></i>
                     </div>
-                    <h2 class="text-3xl md:text-4xl font-bold text-gray-900 mb-4">Short Courses Offered</h2>
+                    <h2 class="text-3xl md:text-4xl font-bold font-bold text-[#8AA624] mb-4">Short Courses Offered</h2>
                     <p class="text-lg text-gray-600 max-w-2xl mx-auto">
                         Practical, focused training programs designed to enhance specific agricultural skills and knowledge.
                     </p>
