--- a/Contact.html
+++ b/Contact.html
@@ -219,7 +219,7 @@
     <!-- Original Contact Page Content -->
     <div>
         <!-- Hero Section -->
-        <section class="py-16 bg-gradient-to-r from-green-600 to-green-700 relative overflow-hidden">
+        <section class="py-16 bg-gradient-to-r from-[#FFDF88] to-[#FFA55D] relative overflow-hidden">
             <!-- Background Image -->
             <div class="absolute inset-0 opacity-20">
                 <img 
@@ -229,7 +229,7 @@
                 />
             </div>
             <div class="container mx-auto px-4 text-center text-white">
-                <h1 class="text-4xl md:text-5xl font-bold mb-6">Contact Us</h1>
+                <h1 class="text-4xl md:text-5xl font-bold  text-[#FFFFFF] mb-6">Contact Us</h1>
                 <p class="text-xl max-w-3xl mx-auto">
                     Ready to transform your agricultural operation? Get in touch with our expert team 
                     for personalized consultation and support.
@@ -256,7 +256,7 @@
             </div>
             <div class="container mx-auto px-4">
                 <div class="text-center mb-12">
-                    <h2 class="text-3xl md:text-4xl font-bold text-gray-900 mb-4">Get In Touch</h2>
+                    <h2 class="text-3xl md:text-4xl font-bold text-[#8AA624] mb-4">Get In Touch</h2>
                     <p class="text-lg text-gray-600 max-w-2xl mx-auto">
                         Multiple ways to reach our agricultural experts. Choose the method that works best for you.
                     </p>
